@@ -14,6 +14,9 @@ introduced in the code and keeptrack of all tags.
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
 
+07-Nov-2014, P. Arce          (phys-ctor-hinelastic-V10-00-08)
+- Add G4HadronPhysicsQGSP_BIC_AllHP for particle_hp physics list
+
 30-Oct-2014, Andrea Dotti               (phys-ctor-hinelastic-V10-00-07)
 - Fix in destructor of G4VHadronPhysics to check validity of pointer. 
 
